--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1"
+  }
   "dependencies": {
     "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
