--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   },
   "engines": {
     "node": "8.12.0",
-    "npm": "6.4.1"
+    "npm": "6.4.1",
+    "yarn": "1.9.4"
   },
   "dependencies": {
     "axios": "^0.18.0",
