--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "sg-schedule",
-  "version": "0.1.0",
+  "name": "backend",
+  "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node ./bin/www"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "engines": {
+    "node": "8.12.0",
+    "npm": "6.4.1",
+    "yarn": "1.9.4"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "dependencies": {
+    "axios": "^0.18.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "hbs": "~4.0.1",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "nedb": "^1.8.0",
+    "node-html-parser": "^1.1.13"
+  }
 }
